# CS_Programm

./: README.md
AVL_Tree/: AVL_Iterator.c  AVL_Iterator.h  AVL_Tree.c  AVL_Tree.h  AVL_iterator.h  CMakeLists.txt  Error.h  Makefile  TestHelper.c  TestHelper.h  main.c  test.txt
AVL_Tree/headers/: AVL_Tree.h  Error.h  TestHelper.h
AVL_Tree/source/: AVL_Iterator.c  AVL_Tree.c  TestHelper.c
AVL_Tree/test/: avlTests.cpp
Distributed Integral Evaluation/: CMakeLists.txt  Makefile  main.c
Distributed Integral Evaluation/includes/: DistributionNetwork.h  IntegralCalculator.h  ParseInfo.h
Distributed Integral Evaluation/src/: DistributionNetwork.c  IntegralCalculator.c  ParseInfo.c
Parallel Integral Calculation/: CMakeLists.txt  IntegralCalculator.c  IntegralCalculator.h  Integrator.c  Integrator.h  Makefile  ParseInfo.c  ParseInfo.h  ParseThreadInfo.c  ParseThreadInfo.h  main.c
